2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* device-src/device.c: Set the device name before reading the label.
	* device-src/fd-device.c: An invalid header indicates an unlabeled
	  volume, not a volume error.
	* device-src/taper-device.c: Insufficient buffer space causes
	  ENOMEM, not ENOSPC, at least on Linux.
	* server-src/amlabel.c: Correctly handle the case where
	  device_read_label() returns exactly 1 set bit.

2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* server-src/taper-source.c, server-src/taper-disk-port-source.c,
	  server-src/taper.c: Be careful not to use strings from getcwd()
	  past the next invocation of getcwd().

2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* device-src/vfs-device.c: Use old VFS device specification.

2007-09-25  Ian Turner <ian@zmanad.com> (merged by dustin@zmanda.com)
	* server-src/amlabel.c: Don't dump core on successful labeling.

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tests/semaphore-test.c device-src/tests/Makefile.am:
	  test semaphore module
	* device-src/semaphore.c: bugfixes, optimizations
	* device-src/semaphore.h: inline documentation

2007-09-25  Nikhil Bandiwadekar <nikhil@zmanda.com> (merged by dustin@zmanda.com)
	* server-src/driver.c: Added quoting to directory name while logging
	    in statistics section
	* server-src/reporter.c: Handled quoted string for directory name in
	    statistics section

2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* device-src/device.c, device-src/device.h, device-src/s3-device.c,
	  device-src/fd-device.c, device-src/tape-device.c,
	  device-src/vfs-device.c, device-src/rait-device.c: Implement new,
	  more nuanced device_read_label() interface.
	* server-src/amcheck.c, server-src/amtape.c, server-src/taperscan.c,
	  server-src/amlabel.c, restore-src/amrestore.c,
	  restore-src/restore.c: Use new interface.